--- a/docs/locale/ru/LC_MESSAGES/about/credits.po
+++ b/docs/locale/ru/LC_MESSAGES/about/credits.po
@@ -72,8 +72,8 @@ msgid ""
 "<http://www.opendataservices.coop>`_) and input from the :doc:`data standard"
 " working group <governance>`."
 msgstr ""
-"\\\"Версию 0.2 написали Джек Лорд, Саймон Уайтхаус и Кади Армстронг (`Open "
-"Data Services Co-operative <http://www.opendataservices.coop>`_), "
-"техническую работу выполнили Джеймс Бастер, Ами Гай и Дэвид Разник (`Open "
-"Data Services Co-operative <http://www.opendataservices.coop>`_), также было"
-" получено содействие рабочей `группы по стандарту данных<governance.rst>`_.."
+"Версию 0.2 написали Джек Лорд, Саймон Уайтхаус и Кади Армстронг (`Open Data "
+"Services Co-operative http://www.opendataservices.coop>`_), техническую "
+"работу выполнили Джеймс Бастер, Ами Гай и Дэвид Разник (`Open Data Services "
+"Co-operative <http://www.opendataservices.coop>`_), также было получено "
+"содействие рабочей :doc:`группы по стандарту данных <governance>`."
