Editing mark up in credits, adding strings to index.po, adding 'Required' to schema/reference.po

--- a/docs/locale/fr/LC_MESSAGES/about/credits.po
+++ b/docs/locale/fr/LC_MESSAGES/about/credits.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-01 11:07+0100\n"
+"POT-Creation-Date: 2019-08-04 17:21+0100\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
 "Language-Team: French (https://www.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -30,8 +30,8 @@ msgid ""
 "<http://www.opendataservices.coop>`_) with Ben Symonds (`OpenCorporates "
 "<http://www.opencorporates.com>`_), Chris Taggart (`OpenCorporates "
 "<http://www.opencorporates.com>`_) and Jack Lord (`Open Data Services Co-"
-"operative <http://www.opendataservices.coop>`_) and supported by the `data "
-"standard working group <governance>`."
+"operative <http://www.opendataservices.coop>`_) and supported by the "
+":doc:`data standard working group <governance>`."
 msgstr ""
 
 # ef31e2cce3b84234a31bd3f69f7b286d
