--- a/docs/locale/ru/LC_MESSAGES/schema/reference.po
+++ b/docs/locale/ru/LC_MESSAGES/schema/reference.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Valery Gusak <valery.gusak@gmail.com>, 2019
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-04 17:21+0100\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Valery Gusak <valery.gusak@gmail.com>, 2019\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -576,6 +577,14 @@ msgid ""
 "change these defaults, use the exclusiveMinimum and exclusiveMaximum "
 "properties."
 msgstr ""
+"Если известна точная доля в процентах, ее следует указать, при этом в "
+"качестве максимального и минимального значений указывается одна и та же "
+"точная доля в процентах. В других случаях максимум и минимум можно "
+"использовать для записи диапазона, в котором находится такая доля участия. "
+"По умолчанию минимум указывается включительно, а максимум — не включительно "
+"(минимальное значение ≤ доля < максимальное значение). Если вы желаете "
+"изменить эти используемые по умолчанию значения, воспользуйтесь свойствами "
+"exclusiveMinimum и exclusiveMaximum."
 
 # 9bf8c0f58baf4234bba1c7eaaa93d020
 #: ../../schema/reference.rst:245
