Editing markdown to fix references/links

--- a/docs/locale/ru/LC_MESSAGES/about/credits.po
+++ b/docs/locale/ru/LC_MESSAGES/about/credits.po
@@ -40,10 +40,10 @@ msgid ""
 msgstr ""
 "Первую бета-версию Стандарта данных о бенефициарном владении написал Тим "
 "Дейвис (`Open Data Services Co-operative "
-"<http://www.opendataservices.coop>`_) с Беном Саймондсом (`OpenCorporates "
-"<http://www.opencorporates.com>`_), Крисом Таггартом (`OpenCorporates "
-"<http://www.opencorporates.com>`_) и Джеком Лордом (`OpenData Services Co-"
-"operative <http://www.opendataservices.coop>`_) при поддержке :doc:`группы "
+"<http://www.opendataservices.coop>`__) с Беном Саймондсом (`OpenCorporates "
+"<http://www.opencorporates.com>`__), Крисом Таггартом (`OpenCorporates "
+"<http://www.opencorporates.com>`__) и Джеком Лордом (`Open Data Services Co-"
+"operative <http://www.opendataservices.coop>`__) при поддержке :doc:`группы "
 "по стандарту данных <governance>`."
 
 # ef31e2cce3b84234a31bd3f69f7b286d
@@ -57,9 +57,9 @@ msgid ""
 msgstr ""
 "Версию 0.1 написали Тим Дейвис и Джек Лорд с предоставлением подтверждающей "
 "документации от Кади Армстронг (`Open Data Services Co-operative "
-"<http://www.opendataservices.coop>`_), техническую работу выполнил Джеймс "
+"<http://www.opendataservices.coop>`__), техническую работу выполнил Джеймс "
 "Бастер (`Open Data Services Co-operative "
-"<http://www.opendataservices.coop>`_), при этом было получено содействие "
+"<http://www.opendataservices.coop>`__), при этом было получено содействие "
 "рабочей :doc:`группы по стандарту данных <governance>`."
 
 # 51628ca7072b4f529336319cecfae3dc
