--- a/docs/locale/es/LC_MESSAGES/schema.po
+++ b/docs/locale/es/LC_MESSAGES/schema.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-06-18 16:05+0100\n"
+"POT-Creation-Date: 2019-08-16 11:07+0100\n"
 "PO-Revision-Date: 2019-06-17 10:43+0000\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
@@ -52,7 +52,7 @@ msgstr ""
 #: schema/components.json:1
 msgid ""
 "What type of source is this? Multiple tags can be combined. Values should "
-"come from the [source type](#sourcetype) codelist."
+"come from the source type codelist."
 msgstr ""
 
 #. /definitions/Source/properties/description/title
@@ -269,8 +269,7 @@ msgstr ""
 
 #. /definitions/Address/properties/type/description
 #: schema/components.json:1
-msgid ""
-"What type of address is this? See the [addressType](#addresstype) codelist."
+msgid "What type of address is this? See the addressType codelist."
 msgstr ""
 
 #. /definitions/Address/properties/address/description
@@ -314,7 +313,7 @@ msgstr ""
 
 #. /definitions/Name/properties/type/description
 #: schema/components.json:1
-msgid "What kind of name is this? See the [nameType](#nametype) codelist."
+msgid "What kind of name is this? See the nameType codelist."
 msgstr ""
 
 #. /definitions/Name/properties/fullName/title
@@ -391,8 +390,8 @@ msgstr ""
 #. /definitions/Interest/properties/type/description
 #: schema/components.json:1
 msgid ""
-"A codelist value indicating the nature of the interest. See the "
-"[interestType codelist](#interesttype)"
+"A codelist value indicating the nature of the interest. See the interestType"
+" codelist"
 msgstr ""
 
 #. /definitions/Interest/properties/interestLevel/title
@@ -607,7 +606,7 @@ msgstr ""
 #: schema/components.json:1
 msgid ""
 "The motivation for this annotation, chosen from a codelist. See the "
-"[annotationMotivation](#annotationmotivation) codelist."
+"annotationMotivation codelist."
 msgstr ""
 
 #. /definitions/Annotation/properties/description/description
@@ -875,15 +874,15 @@ msgstr ""
 #. /properties/entityType/description
 #: schema/entity-statement.json:1
 msgid ""
-"From the [entityType codelist](#entitytype). What kind of entity is this? "
-"The 'registeredEntity' code covers any legal entity created through an act "
-"of official registration, usually resulting in an identifier being assigned "
-"to the entity. The 'legalEntity' code covers other bodies with distinct "
-"legal personality (government departments, international institutions etc.)."
-"  The 'arrangement' code covers artificial entities, described in the data "
-"model for the purpose of associating one or more natural or legal persons "
-"together in an ownership or control relationship, but without implying that "
-"the parties to this arrangement have any other form of collective legal "
+"From the entityType codelist. What kind of entity is this? The "
+"'registeredEntity' code covers any legal entity created through an act of "
+"official registration, usually resulting in an identifier being assigned to "
+"the entity. The 'legalEntity' code covers other bodies with distinct legal "
+"personality (government departments, international institutions etc.).  The "
+"'arrangement' code covers artificial entities, described in the data model "
+"for the purpose of associating one or more natural or legal persons together"
+" in an ownership or control relationship, but without implying that the "
+"parties to this arrangement have any other form of collective legal "
 "identity."
 msgstr ""
 
@@ -902,8 +901,8 @@ msgstr ""
 #. /properties/unspecifiedEntityDetails/properties/reason/description
 #: schema/entity-statement.json:1
 msgid ""
-"The reason that an entity cannot be specified. From the [unspecifiedReason "
-"codelist](#unspecifiedreason)."
+"The reason that an entity cannot be specified. From the unspecifiedReason "
+"codelist."
 msgstr ""
 
 #. /properties/unspecifiedEntityDetails/properties/description/description
@@ -1188,7 +1187,7 @@ msgstr ""
 #: schema/ownership-or-control-statement.json:1 schema/person-statement.json:1
 msgid ""
 "The reason that an interested party cannot be specified. From the "
-"[unspecifiedReason codelist](#unspecifiedreason)."
+"unspecifiedReason codelist."
 msgstr ""
 
 #. /definitions/InterestedParty/properties/unspecified/properties/description/description
@@ -1239,13 +1238,13 @@ msgstr ""
 #. /properties/personType/description
 #: schema/person-statement.json:1
 msgid ""
-"Use the [personType codelist](#persontype). The ultimate beneficial owner of"
-" a legal entity is always a natural person. Where the beneficial owner has "
-"been identified, but information about them cannot be disclosed, use "
-"'anonymousPerson'. Where the beneficial owner has not been clearly "
-"identified, use 'unknownPerson'. Where the beneficial owner has been "
-"identified use knownPerson. Where a person has the type 'anonymousPerson' or"
-" 'unknownPerson' a reason for the absence of information SHOULD be provided "
+"Use the personType codelist. The ultimate beneficial owner of a legal entity"
+" is always a natural person. Where the beneficial owner has been identified,"
+" but information about them cannot be disclosed, use 'anonymousPerson'. "
+"Where the beneficial owner has not been clearly identified, use "
+"'unknownPerson'. Where the beneficial owner has been identified use "
+"knownPerson. Where a person has the type 'anonymousPerson' or "
+"'unknownPerson' a reason for the absence of information SHOULD be provided "
 "in 'unspecifiedPersonDetails')"
 msgstr ""
 
