--- a/docs/locale/ru/LC_MESSAGES/schema.po
+++ b/docs/locale/ru/LC_MESSAGES/schema.po
@@ -5,15 +5,16 @@
 # 
 # Translators:
 # Valery Gusak <valery.gusak@gmail.com>, 2019
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-06-18 16:05+0100\n"
+"POT-Creation-Date: 2019-08-16 11:07+0100\n"
 "PO-Revision-Date: 2019-06-17 10:43+0000\n"
-"Last-Translator: Valery Gusak <valery.gusak@gmail.com>, 2019\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -58,11 +59,10 @@ msgstr "Тип источника"
 #: schema/components.json:1
 msgid ""
 "What type of source is this? Multiple tags can be combined. Values should "
-"come from the [source type](#sourcetype) codelist."
+"come from the source type codelist."
 msgstr ""
 "Какой это тип источника? Несколько тегов могут быть объединены. Значения "
-"должны поступать из списка допустимых значений [типа "
-"источника](#sourcetype)."
+"должны поступать из списка допустимых значений типа источника."
 
 #. /definitions/Source/properties/description/title
 #. /definitions/Annotation/properties/description/title
@@ -318,11 +318,8 @@ msgstr "Тип"
 
 #. /definitions/Address/properties/type/description
 #: schema/components.json:1
-msgid ""
-"What type of address is this? See the [addressType](#addresstype) codelist."
-msgstr ""
-"Какого типа этот адрес? См. список допустимых значений "
-"[addressType](#addresstype)."
+msgid "What type of address is this? See the addressType codelist."
+msgstr "Какого типа этот адрес? См. список допустимых значений addressType."
 
 #. /definitions/Address/properties/address/description
 #: schema/components.json:1
@@ -378,9 +375,8 @@ msgstr ""
 
 #. /definitions/Name/properties/type/description
 #: schema/components.json:1
-msgid "What kind of name is this? See the [nameType](#nametype) codelist."
-msgstr ""
-"Какого типа это имя? См. список допустимых значений [nameType](#nametype)."
+msgid "What kind of name is this? See the nameType codelist."
+msgstr "Какого типа это имя? См. список допустимых значений nameType."
 
 #. /definitions/Name/properties/fullName/title
 #: schema/components.json:1
@@ -474,11 +470,11 @@ msgstr "Тип доли участия"
 #. /definitions/Interest/properties/type/description
 #: schema/components.json:1
 msgid ""
-"A codelist value indicating the nature of the interest. See the "
-"[interestType codelist](#interesttype)"
+"A codelist value indicating the nature of the interest. See the interestType"
+" codelist"
 msgstr ""
 "Значение из списка допустимых значений, указывающее характер доли участия. "
-"См. [список допустимых значений interestType](#interesttype)"
+"См. список допустимых значений interestType"
 
 #. /definitions/Interest/properties/interestLevel/title
 #: schema/components.json:1
@@ -745,11 +741,10 @@ msgstr "Мотивация"
 #: schema/components.json:1
 msgid ""
 "The motivation for this annotation, chosen from a codelist. See the "
-"[annotationMotivation](#annotationmotivation) codelist."
+"annotationMotivation codelist."
 msgstr ""
 "Мотивация для данного примечания, выбранная из списка допустимых значений. "
-"См. список допустимых значений "
-"[annotationMotivation](#annotationmotivation)."
+"См. список допустимых значений annotationMotivation."
 
 #. /definitions/Annotation/properties/description/description
 #: schema/components.json:1
@@ -1067,29 +1062,28 @@ msgstr ""
 #. /properties/entityType/description
 #: schema/entity-statement.json:1
 msgid ""
-"From the [entityType codelist](#entitytype). What kind of entity is this? "
-"The 'registeredEntity' code covers any legal entity created through an act "
-"of official registration, usually resulting in an identifier being assigned "
-"to the entity. The 'legalEntity' code covers other bodies with distinct "
-"legal personality (government departments, international institutions etc.)."
-"  The 'arrangement' code covers artificial entities, described in the data "
-"model for the purpose of associating one or more natural or legal persons "
-"together in an ownership or control relationship, but without implying that "
-"the parties to this arrangement have any other form of collective legal "
+"From the entityType codelist. What kind of entity is this? The "
+"'registeredEntity' code covers any legal entity created through an act of "
+"official registration, usually resulting in an identifier being assigned to "
+"the entity. The 'legalEntity' code covers other bodies with distinct legal "
+"personality (government departments, international institutions etc.).  The "
+"'arrangement' code covers artificial entities, described in the data model "
+"for the purpose of associating one or more natural or legal persons together"
+" in an ownership or control relationship, but without implying that the "
+"parties to this arrangement have any other form of collective legal "
 "identity."
 msgstr ""
-"Из [списка допустимых значений entityType](#entitytype). Какого типа этот "
-"субъект? Значение 'registeredEntity' относится к любому юридическому лицу, "
-"созданному через акт официальной регистрации, в результате чего, как "
-"правило, субъекту присваивается идентификатор. Значение 'legalEntity' "
-"распространяется на другие организации с явно выраженным статусом "
-"юридического лица (государственные ведомства, международные организации и т."
-" д.). Значение 'arrangement' (соглашение о владении и контроле) "
-"распространяется на искусственные субъекты, описанные в модели данных в "
-"целях связывания воедино одного или нескольких физических или юридических "
-"лиц в отношениях владения или контроля, но не подразумевая, что стороны "
-"такого соглашения о владении и контроле имеют какую-либо иную форму "
-"коллективной правовой идентичности."
+"Из списка допустимых значений entityType. Какого типа этот субъект? Значение"
+" 'registeredEntity' относится к любому юридическому лицу, созданному через "
+"акт официальной регистрации, в результате чего, как правило, субъекту "
+"присваивается идентификатор. Значение 'legalEntity' распространяется на "
+"другие организации с явно выраженным статусом юридического лица "
+"(государственные ведомства, международные организации и т. д.). Значение "
+"'arrangement' (соглашение о владении и контроле) распространяется на "
+"искусственные субъекты, описанные в модели данных в целях связывания воедино"
+" одного или нескольких физических или юридических лиц в отношениях владения "
+"или контроля, но не подразумевая, что стороны такого соглашения о владении и"
+" контроле имеют какую-либо иную форму коллективной правовой идентичности."
 
 #. /properties/unspecifiedEntityDetails/title
 #: schema/entity-statement.json:1
@@ -1109,11 +1103,11 @@ msgstr ""
 #. /properties/unspecifiedEntityDetails/properties/reason/description
 #: schema/entity-statement.json:1
 msgid ""
-"The reason that an entity cannot be specified. From the [unspecifiedReason "
-"codelist](#unspecifiedreason)."
+"The reason that an entity cannot be specified. From the unspecifiedReason "
+"codelist."
 msgstr ""
-"Причина невозможности указания субъекта. Из [списка допустимых значений "
-"unspecifiedReason](#unspecifiedreason)."
+"Причина невозможности указания субъекта. Из списка допустимых значений "
+"unspecifiedReason."
 
 #. /properties/unspecifiedEntityDetails/properties/description/description
 #: schema/entity-statement.json:1
@@ -1465,10 +1459,10 @@ msgstr ""
 #: schema/ownership-or-control-statement.json:1 schema/person-statement.json:1
 msgid ""
 "The reason that an interested party cannot be specified. From the "
-"[unspecifiedReason codelist](#unspecifiedreason)."
+"unspecifiedReason codelist."
 msgstr ""
-"Причина невозможности указания заинтересованной стороны. Из [списка "
-"допустимых значений unspecifiedReason](#unspecifiedreason)."
+"Причина невозможности указания заинтересованной стороны. Из списка "
+"допустимых значений unspecifiedReason."
 
 #. /definitions/InterestedParty/properties/unspecified/properties/description/description
 #. /properties/unspecifiedPersonDetails/properties/description/description
@@ -1533,26 +1527,25 @@ msgstr "Тип физического лица"
 #. /properties/personType/description
 #: schema/person-statement.json:1
 msgid ""
-"Use the [personType codelist](#persontype). The ultimate beneficial owner of"
-" a legal entity is always a natural person. Where the beneficial owner has "
-"been identified, but information about them cannot be disclosed, use "
-"'anonymousPerson'. Where the beneficial owner has not been clearly "
-"identified, use 'unknownPerson'. Where the beneficial owner has been "
-"identified use knownPerson. Where a person has the type 'anonymousPerson' or"
-" 'unknownPerson' a reason for the absence of information SHOULD be provided "
+"Use the personType codelist. The ultimate beneficial owner of a legal entity"
+" is always a natural person. Where the beneficial owner has been identified,"
+" but information about them cannot be disclosed, use 'anonymousPerson'. "
+"Where the beneficial owner has not been clearly identified, use "
+"'unknownPerson'. Where the beneficial owner has been identified use "
+"knownPerson. Where a person has the type 'anonymousPerson' or "
+"'unknownPerson' a reason for the absence of information SHOULD be provided "
 "in 'unspecifiedPersonDetails')"
 msgstr ""
-"Используйте [список допустимых значений personType](#persontype). Конечный "
-"бенефициарный владелец юридического лица всегда является физическим лицом. "
-"Если бенефициарный владелец был идентифицирован, но информация о нем не "
-"может быть раскрыта, используйте 'anonymousPerson' (неустановленное "
-"физическое лицо). Если бенефициарный владелец не был четко идентифицирован, "
-"используйте 'unknownPerson' (неизвестное физическое лицо). Если "
-"бенефициарный владелец был идентифицирован, используйте 'knownPerson' "
-"(известное физическое лицо). Если физическое лицо имеет тип "
-"'anonymousPerson' или 'unknownPerson', то в 'unspecifiedPersonDetails' "
-"(неуказанные сведения о физическом лице) СЛЕДУЕТ указать причину отсутствия "
-"информации."
+"Используйте список допустимых значений personType. Конечный бенефициарный "
+"владелец юридического лица всегда является физическим лицом. Если "
+"бенефициарный владелец был идентифицирован, но информация о нем не может "
+"быть раскрыта, используйте 'anonymousPerson' (неустановленное физическое "
+"лицо). Если бенефициарный владелец не был четко идентифицирован, используйте"
+" 'unknownPerson' (неизвестное физическое лицо). Если бенефициарный владелец "
+"был идентифицирован, используйте 'knownPerson' (известное физическое лицо). "
+"Если физическое лицо имеет тип 'anonymousPerson' или 'unknownPerson', то в "
+"'unspecifiedPersonDetails' (неуказанные сведения о физическом лице) СЛЕДУЕТ "
+"указать причину отсутствия информации."
 
 #. /properties/unspecifiedPersonDetails/title
 #: schema/person-statement.json:1
