--- a/docs/locale/ru/LC_MESSAGES/schema/concepts.po
+++ b/docs/locale/ru/LC_MESSAGES/schema/concepts.po
@@ -5,15 +5,16 @@
 # 
 # Translators:
 # Valery Gusak <valery.gusak@gmail.com>, 2019
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Valery Gusak <valery.gusak@gmail.com>, 2019\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,12 +22,12 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-# ea3fa253a9004a5a821a29d09098542a
+# 87b8cb58b7494c79817d9e81096027d0
 #: ../../schema/concepts.rst:4
 msgid "Key concepts"
 msgstr "Основные концепции"
 
-# 0920121040084537aa294169c69b5c32
+# e71ad0e1f3b64333838858ed48986bbe
 #: ../../schema/concepts.rst:8
 msgid ""
 "This is v0.2 of the Beneficial Ownership Data Standard. It includes updates "
@@ -42,7 +43,7 @@ msgstr ""
 "<changelog>` и `О стандарте <../about>`_ для получения дополнительной "
 "информации."
 
-# 8629c617333f4e0cbcf8a486c8ce2fd0
+# e339e97308c34e84be25ac7a5201bb1c
 #: ../../schema/concepts.rst:10
 msgid ""
 "**MUST** and **SHOULD** are used in the schema to denote required and "
@@ -53,7 +54,7 @@ msgstr ""
 " рекомендуемых элементов Стандарта, как определено в `RFC2119 "
 "<https://tools.ietf.org/html/rfc2119>`_."
 
-# f136220c3c6d44ca96bab4e12a8c2f07
+# 39aefe6717ae4d3a83fa4023c1653a76
 #: ../../schema/concepts.rst:13
 msgid ""
 "The concept of a 'statement' is at the heart of the Beneficial Ownership "
@@ -64,28 +65,28 @@ msgstr ""
 " Данные СДБВ состоят из собрания упорядоченных записей, описывающих "
 "следующее:"
 
-# 4cabe835ab2d488f85dc919f5ace21c7
+# 6af55ab0c5fa4ba8aed4761f2d3778d8
 #: ../../schema/concepts.rst:15
 msgid "Ownership or control"
 msgstr "Владение или контроль"
 
-# cfa7f51dfd574e69b1fdebe4be135a1f
+# 555106a99a0e42b8857e2520cf30beeb
 #: ../../schema/concepts.rst:16
 msgid "Entities (including companies, trusts and arrangements)"
 msgstr ""
 "Субъекты (включая компании, трасты и соглашения о владении и контроле)"
 
-# eaa833015a16420984fd7cac308783e8
+# 4cca36b1ab3849eaae196a927aceab20
 #: ../../schema/concepts.rst:17
 msgid "Natural persons (who own or control entities)"
 msgstr "Физические лица (которые владеют компаниями или контролируют их)"
 
-# 51ff94cc0e5140598b973e59cfc7d78f
+# 866aebe4bc5b47dd88caaa7c19e4ae82
 #: ../../schema/concepts.rst:20
 msgid "Statements"
 msgstr "Записи"
 
-# edbd7ea8dc6040b9a7691bfc59fdf4a1
+# ce3547102ea44291875798ac5738549a
 #: ../../schema/concepts.rst:22
 msgid ""
 "Details of how an interested party controls or owns a company or other legal"
@@ -95,7 +96,7 @@ msgstr ""
 "компанией или юридическим лицом, оформленные в запись о владении или "
 "контроле."
 
-# 0c208539585c464f8854472c7d43d443
+# 7594ef8e4adc4662b8fb7606b3bceebe
 #: ../../schema/concepts.rst:27
 msgid ""
 "Details of the subject of an ownership-or-control statement and its "
@@ -106,7 +107,7 @@ msgstr ""
 "стороне оформлены в отдельные записи. Запись о владении или контроле "
 "ссылается на эти записи, выступая в качестве соединителя."
 
-# ef5eb9461e5f42d58c29a6f8f46fa528
+# 0f53d31feb384ac094fad46bfb74559f
 #: ../../schema/concepts.rst:32
 msgid ""
 "Together, the statements above tell us that Roberto Lopez has some kind of "
@@ -115,7 +116,7 @@ msgstr ""
 "Указанные выше записи вместе говорят нам о том, что Роберто Лопес имеет "
 "определенную долю участия или контроля в RENCO Energy Ltd."
 
-# 701ccd2e8a8c4e14ba463b5ea3b3ee08
+# 2b8a77fee32e429eab17c7fb3c73e6d8
 #: ../../schema/concepts.rst:34
 msgid ""
 "The :any:`schema reference <schema-reference>` defines in detail the fields "
@@ -124,12 +125,12 @@ msgstr ""
 ":any:`Справочник схемы <schema-reference>` подробно определяет поля, которые"
 " должна иметь каждая запись, и то, как они должны быть структурированы."
 
-# 8a76da4d18bf4e32a676b3f59903e532
+# 0b5d101fc4054baaa9a36cd90444b939
 #: ../../schema/concepts.rst:37
 msgid "Statements as claims"
 msgstr "Записи в виде заявлений"
 
-# ecc5d90e86514d8e85ca780d2d3747a9
+# f5039a2151fc44fe9391e9e7137399c6
 #: ../../schema/concepts.rst:39
 msgid ""
 "Each statement represents a claim about beneficial ownership made by a "
@@ -138,7 +139,7 @@ msgstr ""
 "Каждая запись отражает заявление касательно бенефициарного владения, "
 "сделанное в определенном источнике в определенный момент времени."
 
-# cb4a09eff09647c2a3cdff96351278ee
+# acd6949c522044cbbd8b68ddaafe6d2b
 #: ../../schema/concepts.rst:44
 msgid ""
 "Modelling beneficial ownership information in this way allows us to make "
@@ -149,17 +150,17 @@ msgstr ""
 " данные, полученные из нескольких источников за продолжительные периоды "
 "времени. В частности, оно допускает:"
 
-# e3c681ae286247ac9f1e476e26d4d49f
+# c7fdc3d590c84434b8c223e580c7d521
 #: ../../schema/concepts.rst:46
 msgid "Statements about beneficial ownership to conflict"
 msgstr "Конфликт между записями о бенефициарном владении"
 
-# 8ad85d0d68454094b1143d3779aae872
+# b9d2bdd71c1b41d5b07d738f0a1abe30
 #: ../../schema/concepts.rst:47
 msgid "Statements about beneficial ownership to overlap"
 msgstr "Наложение записей о бенефициарном владении"
 
-# 447251b3a1d74ce9a701fc683c728ecf
+# 8623f648b1704cc1b7e0051b40ed323d
 #: ../../schema/concepts.rst:48
 msgid ""
 "Production of historical beneficial ownership snapshots (to answer questions"
@@ -168,10 +169,10 @@ msgid ""
 msgstr ""
 "Получение моментальных снимков бенефициарного владения за прошлые периоды "
 "(для ответа на вопросы «Кто знал что, когда?»). Это известно под названием "
-"«битемпорального моделирования» "
-"<https://en.wikipedia.org/wiki/Bitemporal_Modeling>`_."
+"`битемпорального моделирования "
+"<https://en.wikipedia.org/wiki/Bitemporal_Modeling>`__."
 
-# c1da255850544badbc46ac33352ccef7
+# 6cd9a4be24d9497da339d105541e7d5c
 #: ../../schema/concepts.rst:50
 msgid ""
 "When representing data conforming to BODS, users therefore need to handle "
@@ -188,17 +189,17 @@ msgstr ""
 "записях о физических лицах и записях о субъектах (``personStatements`` и "
 "``entityStatements``)."
 
-# 3e117e26fc0a4d63b75ece87e9417a60
+# eec0d31cca1e4c37bd715db0314feb91
 #: ../../schema/concepts.rst:54
 msgid "Data model overview"
 msgstr "Обзор модели данных"
 
-# 68a5cdb95b3a416db207eff03a11c3b9
+# 62f16f8475ed49c9af01ddad06f8bd41
 #: ../../schema/concepts.rst:56
 msgid "Statements are specified in the data schema as JSON objects:"
 msgstr "Записи определены в схеме данных как объекты JSON:"
 
-# a6a78f5e09714d18b74f3bad1717b6e9
+# ad5d25e584d041c8812c48b871607ac4
 #: ../../schema/concepts.rst:58
 msgid ""
 ":any:`Ownership-or-control statement <schema-ownership-or-control-"
@@ -207,17 +208,17 @@ msgstr ""
 ":any:`Запись о владении или контроле <schema-ownership-or-control-"
 "statement>`"
 
-# 65734b3b3326479ba9f63b23c49f331c
+# 8440aa518ff44fc7b8f8de6262fd5aa0
 #: ../../schema/concepts.rst:59
 msgid ":any:`Entity statement <schema-entity-statement>`"
 msgstr ":any:`Запись о субъекте <schema-entity-statement>`"
 
-# 15f57ebea7584f3ba826acba439065a5
+# 27e723c0f3b7417abfa09d63084bb8c3
 #: ../../schema/concepts.rst:60
 msgid ":any:`Person statement <schema-person-statement>`"
 msgstr ":any:`Запись о физическом лице <schema-person-statement>`"
 
-# e8105081215e45dd89e604eaae82455f
+# e6d44b8bb8fb4162babaa7b29881c8f2
 #: ../../schema/concepts.rst:62
 msgid ""
 "Each statement has a ``statementIdentifier`` and ``statementType`` field. "
@@ -227,7 +228,7 @@ msgstr ""
 "Каждая запись имеет поле ``statementIdentifier`` и``statementType``. "
 "``statementIdentifier`` существует исключительно в целях соединения записей."
 
-# 7aeeec1542454407a891517b391b56c8
+# 005a4f7b937d440291c64954537af4e5
 #: ../../schema/concepts.rst:64
 msgid ""
 "**Entity statements** are used to describe registered legal entities that "
@@ -241,7 +242,7 @@ msgstr ""
 "субъекты (такие как совместные акционерные соглашения о владении и "
 "контроле)."
 
-# e557ce007c8b470a935a17066ce32d6a
+# a1430ace96834aa9b004eef898b282e6
 #: ../../schema/concepts.rst:65
 msgid ""
 "**Person statements** describe the natural persons who stand in "
@@ -250,7 +251,7 @@ msgstr ""
 "**Записи о физических лицах** описывают физических лиц, состоящих в "
 "отношениях конечного бенефициарного владения или контроля"
 
-# d7b459f0f20b4837a91f81935dfbe2c7
+# 65581bb11e7449eca657d1cc11c7e518
 #: ../../schema/concepts.rst:66
 msgid ""
 "**Ownership-or-control statements** describe the interest(s) held by one "
@@ -262,7 +263,7 @@ msgstr ""
 "соответствующими субъектами и физическими лицами при помощи ссылок "
 "``statementIdentifier``."
 
-# 94761def006b479ea2ebcda5c58b73d8
+# 62f52a2c9c9e42cc941e5a4ecf883de6
 #: ../../schema/concepts.rst:68
 msgid ""
 "All statements have ``source`` and ``annotations`` properties which can "
@@ -276,7 +277,7 @@ msgstr ""
 "верификация информации. См. :ref:`Источники и примечания <provenance>` для "
 "получения рекомендаций."
 
-# 1755d04977a24ca3a3d09e12fb592996
+# 9a9b061004d34d139236b799d358a2b5
 #: ../../schema/concepts.rst:70
 msgid ""
 "``personStatements`` and ``entityStatements`` both contain a set of fields "
@@ -287,7 +288,7 @@ msgstr ""
 "которые могут использоваться для раскрытия фактической идентичности субъекта"
 " или личности физического лица. Они включают в себя следующее:"
 
-# 914a15c19b844470b31a0a794d0a41c3
+# 202a0a7708e64147b5fd21f0c0aa5a77
 #: ../../schema/concepts.rst:72
 msgid ""
 "An ``identifiers`` array that is used to provide known identifiers such as "
@@ -299,12 +300,12 @@ msgstr ""
 "доступные для публичного распространения идентификаторы налогоплательщиков "
 "для физических лиц."
 
-# 214323dd403f4b469402d716af1279fe
+# 6157e9aa138a46fcbc3ae2d82a6b4614
 #: ../../schema/concepts.rst:73
 msgid "Jurisdiction or Nationality information"
 msgstr "Информация о юрисдикции или гражданстве"
 
-# a99e74ba819649098dcf0911f48d6fe3
+# 5d40df2f20254d32b2403d4f0b08a60b
 #: ../../schema/concepts.rst:74
 msgid ""
 "Important dates (birth date, death date, founding date, dissolution date)"
@@ -312,12 +313,12 @@ msgstr ""
 "Важные даты (дата рождения, дата смерти, дата основания, дата прекращения "
 "существования юридического лица)"
 
-# 8dcd62185af140c69e28341569689582
+# 1cd51cf1db0548819ef8511a2cae9a44
 #: ../../schema/concepts.rst:75
 msgid "Addresses"
 msgstr "Адреса"
 
-# fca55c8705d743368eaa8290e8496908
+# 881fbbc4d9fc4c00a9e09278030c3619
 #: ../../schema/concepts.rst:77
 msgid ""
 "Including such identifiers allows intelligent integration of information "
@@ -327,7 +328,7 @@ msgstr ""
 "интеграции информации между разными фактами раскрытия информации, наборами "
 "данных и разным временем."
 
-# c5a76b3d0b53417ea2ca88c0d3e7381b
+# fc493b12c8a043c29b24cfdb530f6ab1
 #: ../../schema/concepts.rst:79
 msgid ""
 "These fields are designed to support 'strict' and 'relaxed' validation, to "
@@ -343,7 +344,7 @@ msgstr ""
 "обеспечивать максимальное количество данных с учетом соответствующих "
 "ограничений касательно политики и конфиденциальности."
 
-# 45be3a3f4abe4ad381a78a692467fad4
+# 072454d59c7b4fc496595d4034947355
 #: ../../schema/concepts.rst:81
 msgid ""
 "An ``ownershipOrControlStatement`` connects (via ``statementIdentifier`` "
@@ -357,17 +358,17 @@ msgstr ""
 "субъекте (``entityStatement``)) и заинтересованную сторону "
 "(``interestedParty``). Этой заинтересованной стороной может быть:"
 
-# 2e1c02c30d634da295dc0c954e0e974e
+# a0287c9a8bbe49048741a4faba2bf5f1
 #: ../../schema/concepts.rst:83
 msgid "Another entity described by an ``entityStatement``;"
 msgstr "Другой субъект, описанный в записи ``entityStatement``;"
 
-# 9a22814fb72f4af2a494ae67564f138c
+# 6d488de17f68444db62c9efbe311d677
 #: ../../schema/concepts.rst:84
 msgid "A person described by a ``personStatement``; or"
 msgstr "Физическое лицо, описанное в записи ``personStatement``; или"
 
-# 7f517f80347b4863ad2e2af10797b5e0
+# c6abac1d591f4527b44bc71b363cec73
 #: ../../schema/concepts.rst:85
 msgid ""
 "An unspecified party and the reasons that no ownership or control can be "
@@ -376,7 +377,7 @@ msgstr ""
 "Неуказанная сторона и причины, по которым не могут быть указаны владение или"
 " контроль."
 
-# 0653e91d15c24cc696508dfb250edbd1
+# ef51a15686c945729b2b60228a0af540
 #: ../../schema/concepts.rst:87
 msgid ""
 "The ownership-or-control statement also contains an array of ``interests``, "
@@ -390,7 +391,7 @@ msgstr ""
 "соответствующих случаях значение в процентах, указывающее размер доли "
 "участия."
 
-# 77247b4b725c4fc2a986f03b0c0363c7
+# fead8340e0b942bbb0e8ab85c9a71b40
 #: ../../schema/concepts.rst:89
 msgid ""
 "To explore the structure of the data model in full use the :doc:`Schema "
@@ -402,32 +403,32 @@ msgstr ""
 ":any:`Справочником схемы <schema-reference>` для получения подробных "
 "определений каждого объекта и поля."
 
-# 42dc984f4c804f75a21b74967f6a25fb
+# 91a51ed66da241a193b42313f8f968eb
 #: ../../schema/concepts.rst:93
 msgid "Ownership or control through arrangements"
 msgstr "Владение или контроль на основе соглашений о владении и контроле"
 
-# cbea0b5f961a4aca9005e19f00e95b84
+# 23713cf4a8874fa082a173ae444db299
 #: ../../schema/concepts.rst:95
 msgid "In some cases ownership or control is exercised through:"
 msgstr "В некоторых случаях владение или контроль осуществляется посредством:"
 
-# df8d20efb0b74208807589d87b1ef7ae
+# 4338f7a8ec014204856087cdd81ca37c
 #: ../../schema/concepts.rst:97
 msgid "Trusts;"
 msgstr "Трастов;"
 
-# 5cdf2c2569184f79b7ac34f74778ff75
+# e7b0a66d656e43bab43bfec80906c216
 #: ../../schema/concepts.rst:98
 msgid "Contracts; and"
 msgstr "Договоров; а также"
 
-# 11ee4a44951c4dc39b706f9d54aebd63
+# 8cdbeecaf38d4823b1696b1945ebcacf
 #: ../../schema/concepts.rst:99
 msgid "Other arrangements"
 msgstr "Других соглашений о владении и контроле."
 
-# 88b62d1730ef49aa8de527b7bb735cdb
+# a6d3d2377f5f4f238c6543729e1dab03
 #: ../../schema/concepts.rst:101
 msgid ""
 "Depending on the particular jurisdiction these are covered by, they may or "
@@ -436,7 +437,7 @@ msgstr ""
 "В зависимости от конкретной юрисдикции, действие которой распространяется на"
 " них, они могут иметь или не иметь зарегистрированную правосубъектность."
 
-# 449248edc18045209a071e76e486ff92
+# 2e26a453cebe4c81a3576cdd97a49dd4
 #: ../../schema/concepts.rst:103
 msgid ""
 "In BODS arrangements such as these are treated as a special kind of "
@@ -446,7 +447,7 @@ msgstr ""
 "рассматриваются как особый тип записи ``entityStatement``, в которой "
 "``entityType`` имеет значение «arrangement»."
 
-# 32f4f4216dd545c896b4ef7383c2bb5f
+# e696baa347ea496e91d0da15bd8a05e2
 #: ../../schema/concepts.rst:105
 msgid ""
 "This allows control via arrangements to be modelled in two steps, describing"
@@ -455,18 +456,18 @@ msgstr ""
 "Это позволяет моделировать контроль при помощи соглашений о владении и "
 "контроле в два шага с описанием того, как:"
 
-# 17fd20c9561f436cadc0b38d31319e47
+# 911a4a8e0499412b8dd5760434e948be
 #: ../../schema/concepts.rst:107
 msgid "Person P has an interest in Arrangement A"
 msgstr ""
 "Физическое лицо P имеет долю участия в Соглашении о владении и контроле A"
 
-# d5c756fe9be4496c8a103bd57fad68d9
+# 699bc06be11f4d7496d22bad8ffe1483
 #: ../../schema/concepts.rst:108
 msgid "Arrangement A has an interest in Entity E"
 msgstr "Соглашение о владении и контроле A имеет долю участия в Субъекте E"
 
-# 6d21e9e17d214b1eabd69cc5c0c62dbb
+# 9f0f9212039348f29192d8b2e884e45f
 #: ../../schema/concepts.rst:110
 msgid ""
 "For more guidance on modelling arrangements, contact the :any:`BODS Helpdesk"
@@ -476,12 +477,12 @@ msgstr ""
 "соглашений о владении и контроле обратитесь в `Службу технической поддержки "
 "СДБВ <support>`."
 
-# d5e5ed1579f04685bf45df33aa242dc7
+# 7e3b64bf34c34ddd9cf8c9392b08faa4
 #: ../../schema/concepts.rst:113
 msgid "Direct and indirect ownership and control"
 msgstr "Прямое и косвенное владение и контроль"
 
-# 137c9212ad7d4c10bc40985492c86cdf
+# f3f3e42162e8423182b2ef9a0af6a762
 #: ../../schema/concepts.rst:115
 msgid ""
 "BODS can be used to describe both direct ownership and control (where Person"
@@ -500,12 +501,12 @@ msgstr ""
 "``interestLevel`` (уровень участия), которое может быть задано для каждой "
 "заявленной доли участия."
 
-# 250463066a9847a2a5cda0403e214f1c
+# 50928c8c33c340aab68b7ecd756a4393
 #: ../../schema/concepts.rst:119
 msgid "Immutability of statements"
 msgstr "Неизменность записей"
 
-# 272cb6a7f11049b08c31f85790487102
+# ea50ee5a4aa140cd8f8dcf662f8c9199
 #: ../../schema/concepts.rst:121
 msgid ""
 "Published BODS statements should be treated as a write-only ledger, with new"
