--- a/docs/locale/ru/LC_MESSAGES/schema.po
+++ b/docs/locale/ru/LC_MESSAGES/schema.po
@@ -6,15 +6,16 @@
 # Translators:
 # Valery Gusak <valery.gusak@gmail.com>, 2019
 # Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019
+# Amy Guy <amy.guy@opendataservices.coop>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-08-20 08:23+0100\n"
+"POT-Creation-Date: 2019-09-06 12:21+0000\n"
 "PO-Revision-Date: 2019-06-17 10:43+0000\n"
-"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019\n"
+"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -278,8 +279,8 @@ msgid ""
 "URI](https://en.wikipedia.org/wiki/Uniform_Resource_Identifier) this may be "
 "included"
 msgstr ""
-"Если этот идентификатор имеет [общепринятый URI] "
-"(https://ru.wikipedia.org/wiki/URI), то его необходимо указать"
+"Если этот идентификатор имеет [общепринятый "
+"URI](https://ru.wikipedia.org/wiki/URI), то его необходимо указать"
 
 #. /definitions/ID/title
 #: schema/components.json:1
