--- a/docs/locale/ru/LC_MESSAGES/schema/concepts.po
+++ b/docs/locale/ru/LC_MESSAGES/schema/concepts.po
@@ -6,6 +6,7 @@
 # Translators:
 # Valery Gusak <valery.gusak@gmail.com>, 2019
 # Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019
+# Amy Guy <amy.guy@opendataservices.coop>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019\n"
+"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -474,8 +475,8 @@ msgid ""
 " <support>`."
 msgstr ""
 "Для получения дополнительных рекомендаций касательно моделирования "
-"соглашений о владении и контроле обратитесь в `Службу технической поддержки "
-"СДБВ <support>`."
+"соглашений о владении и контроле обратитесь в :any:`Службу технической "
+"поддержки СДБВ <support>`."
 
 # 7e3b64bf34c34ddd9cf8c9392b08faa4
 #: ../../schema/concepts.rst:113
